force-app/main/default/objects/Receipt_Line__c/Receipt_Line__c.object-meta.xml
<CustomObject>
    <description>Scanned receipt line. Each row is one scanned SKU matched against an open PO line.</description>
    <label>Receipt Line</label>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Receipt Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>