force-app/main/default/objects/Receipt_Line__c/fields/Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Match_Status__c</fullName>
    <label>Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>Over</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Unmatched</fullName>
                <default>true</default>
                <label>Unmatched</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>