force-app/main/default/objects/Receipt_Line__c/fields/PO_Line__c.field-meta.xml
<CustomField>
    <fullName>PO_Line__c</fullName>
    <label>PO Line</label>
    <referenceTo>Vendor_PO_Line__c</referenceTo>
    <relationshipLabel>Receipt Lines</relationshipLabel>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>