force-app/main/default/objects/Receipt_Line__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <label>Qty</label>
    <precision>14</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>