force-app/main/default/objects/Receipt_Line__c/fields/Scanned_SKU__c.field-meta.xml
<CustomField>
    <fullName>Scanned_SKU__c</fullName>
    <label>Scanned SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>